# Serial-update-sample

./: .gitignore  CMakeLists.txt  README.md  goplt_if.cpp  goplt_if.h  sample.cpp  update_sample.cpp
contents/: sample1.etlx  update_data.etlx
update_data/: GOP.ini  meminfo.txt
update_data/SI00/: SI0001.lsd  SI0002.lsd  SI0003.lsd  SI0004.lsd  SI0005.lsd  SI0006.lsd  SI0007.lsd  SI0008.lsd  SI0009.lsd  SI0010.lsd  SI0011.lsd  SI0012.lsd  SI0013.lsd  SI0014.lsd  SI0015.lsd  SI0016.lsd  SI0017.lsd  SI0018.lsd  SI0019.lsd  SI0020.lsd  SI0021.lsd  SI0022.lsd  SI0023.lsd  SI0024.lsd  SI0025.lsd  SI0026.lsd  SI0027.lsd  SI0028.lsd  SI0029.lsd  SI0030.lsd  SI0031.lsd  SI0032.lsd  SI0033.lsd  SI0034.lsd  SI0035.lsd  SI0036.lsd  SI0037.lsd  SI0038.lsd  SI0039.lsd  SI0040.lsd  (+24 more)
